--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/react": "^8.15.0",
+    "@sentry/vite-plugin": "^2.20.1",
     "framer-motion": "^11.2.13",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
